RESOLVED FIXED 151645
Modern IDB: Resolve flaky GC-vs-wrapper issue with IDBOpenDBRequest
https://bugs.webkit.org/show_bug.cgi?id=151645
Summary Modern IDB: Resolve flaky GC-vs-wrapper issue with IDBOpenDBRequest
Brady Eidson
Reported 2015-11-28 23:10:24 PST
Modern IDB: Resolve flaky GC-vs-wrapper issue with IDBOpenDBRequest IDBRequest::hasPendingActivity() lies for IDBOpenDBRequests that have fired their onUpgradeNeeded event but not yet fired their onSuccess event. GC can happen between, removing the wrapper, and therefore causing onSuccess to never actually fire.
Attachments
Patch v1 (5.35 KB, patch)
2015-11-29 09:53 PST, Brady Eidson
no flags
Brady Eidson
Comment 1 2015-11-29 09:53:03 PST
Created attachment 266223 [details] Patch v1
WebKit Commit Bot
Comment 2 2015-11-30 10:24:37 PST
Comment on attachment 266223 [details] Patch v1 Clearing flags on attachment: 266223 Committed r192803: <http://trac.webkit.org/changeset/192803>
WebKit Commit Bot
Comment 3 2015-11-30 10:24:41 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.